--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/springBootDemo
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-server.error.include-message=always
-
-#demo for using data from config file
-welcome.message = "Hello world !!!"
+#spring.datasource.url=jdbc:postgresql://localhost:5432/springBootDemo
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#server.error.include-message=always
+#
+##demo for using data from config file
+#welcome.message = "Hello world !!!"
