multiple profiles created for application

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,15 @@
+server:
+  port: '8080'
+  error:
+    include-message: always
 spring:
+  profiles:
+    active: dev
+
+---
+
+spring:
+  profiles: dev
   datasource:
     username: postgres
     url: jdbc:postgresql://localhost:5432/springBootDemo
@@ -13,7 +24,41 @@ spring:
     show-sql: 'true'
 welcome:
   message: '"Hello world !!!"'
-server:
-  port: '8080'
-  error:
-    include-message: always
+
+---
+
+spring:
+  profiles: qa
+  datasource:
+    username: postgres
+    url: jdbc:postgresql://localhost:5432/springBootDemo
+    password: root
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: 'true'
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: 'true'
+welcome:
+  message: '"Hello world !!!"'
+
+---
+
+spring:
+  profiles: prod
+  datasource:
+    username: postgres
+    url: jdbc:postgresql://localhost:5432/springBootDemo
+    password: root
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: 'true'
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: 'true'
+welcome:
+  message: '"Hello world !!!"'
