starter-actuator dependecy added, exposed endpoints, created custom FeatureEndpoints

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,12 @@ spring:
     show-sql: 'true'
 welcome:
   message: '"Hello world !!!"'
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: "beans"
 
 ---
 
